[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,32 @@
 <html>
-</html>
+<head>
+    <title>
+        Article-one|JATIN AGRAWAL
+    </title>
+</head>    
+    <body>
+        <div>
+            <a> href="/">Home</a>
+        </div>
+        <hr>
+        <hr3>
+            Article-One
+        </hr3>
+        <div>
+            SEP 08/08/2017
+        </div>
+        <div>
+            <p>
+                THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.
+                
+            </p>
+            <p>
+                THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.
+                
+            </p>
+            <p>
+                THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.
+            </p>
+          </div>
+          </body>
+          </html>
