[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,9 +3,19 @@
     <title>
         Article-one|JATIN AGRAWAL
     </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+        .container{
+            max width: 800px;
+            margin: 0 auto;
+            color: grey;
+            font-family: sans-serif;
+        }
+    </style>
 </head>    
     <body>
+        
+    <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -36,6 +46,7 @@
                 THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.THIS IS THE CONTENT FOR MY FIRST WEB PAGE.
             </p>
             </h5>
-          </div>
+            </div>
+    </div>
           </body>
           </html>
