[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,9 +10,9 @@
             margin: 0 auto;
             color: #690505;
             font-family: sans-serif;
-            padding top: 60px;
-            padding left: 20px;
-            padding right: 20px;
+            padding-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
 }
         }
     </style>
