--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,21 @@
         Article-Two | JATIN AGRAWAL
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+    <style>
+        .container{
+            max width: 800px;
+            margin: 0 auto;
+            color: #690505;
+            font-family: sans-serif;
+            padding-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
+}
+        }
+    </style>
 </head>    
     <body>
+    <div>
         <div>
             <a href="/">Home</a>
         </div>
@@ -37,5 +50,6 @@
             </p>
             </h5>
           </div>
+    </div>      
           </body>
           </html>
