[imad-console] Updates article-three.html

--- a/article-three.html
+++ b/article-three.html
@@ -1,2 +1,19 @@
 <html>
+<head>
+    <title>ARTICLE-THREE | JATIN AGRAWAL</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+<body>
+    <div>
+        <a href="/">home</a>
+    </div>
+    <hr/>
+    <hr3>ARTICLE THREE</hr3>
+    <div>SEPT 21,2017</div>
+    <div>
+        <p>
+            THIS IS MY FIRST WEB PAGE.
+        </p>
+    </div>
+    </body>
 </html>
