--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,8 +2,18 @@
 <head>
     <title>ARTICLE-ONE | JATIN AGRAWAL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+    .container{
+        max-width: 800px;
+        margin:0 auto;
+        color:grey;
+        font-family: sans-serif;
+    }
+</style>
+
 </head>
 <body>
+    <div>
     <div>
         <a href="/">home</a>
     </div>
@@ -14,6 +24,7 @@
         <p>
             THIS IS MY FIRST WEB PAGE.
         </p>
+    </div>
     </div>
     </body>
 </html>
