[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,6 +8,9 @@
         margin:0 auto;
         color:grey;
         font-family: sans-serif;
+        paddling-top:60px;
+        paddling-left:20px;
+        paddling-right:20px;
     }
 </style>
 
