[imad-console] Updates article-three.html

--- a/article-three.html
+++ b/article-three.html
@@ -1,9 +1,22 @@
-<html>
+ <html>
 <head>
     <title>ARTICLE-THREE | JATIN AGRAWAL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+    .container{
+        max-width: 800px;
+        margin:0 auto;
+        color:grey;
+        font-family: sans-serif;
+        paddling-top: 60px;
+        paddling-left: 100px;
+        paddling-right: 100px;
+    }
+</style>
+
 </head>
 <body>
+    <div>
     <div>
         <a href="/">home</a>
     </div>
@@ -14,6 +27,7 @@
         <p>
             THIS IS MY FIRST WEB PAGE.
         </p>
+    </div>
     </div>
     </body>
 </html>
