--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,17 +2,7 @@
 <head>
     <title>ARTICLE-TWO | JATIN AGRAWAL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-<style>
-    .container{
-        max-width: 800px;
-        margin:0 auto;
-        color:grey;
-        font-family: sans-serif;
-        paddling-top: 60px;
-        paddling-left: 100px;
-        paddling-right: 100px;
-    }
-</style>
+ <link href="/ui/style.css" rel="stylesheet" />
 
 </head>
 <body>
